[tool.poetry]
name = "monalysa"
version = "0.2.0"
description = "A unified library for quantitative movement analysis."
authors = ["Sivakumar Balasubramanian (Siva) <siva82kb@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/siva82kb/monalysa"
repository = "https://github.com/siva82kb/monalysa"
keywords = ["movement analysis", "biomechanics", "neurorehabilitation", "sport science"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry`.api"

[project-optional-dependencies]
docs = [
    "sphinx=5.0.2",
    "myst-parser",
    "furo",
    "nbsphinx"
]
